[package]
name = "monero_rust_handshake"
version = "0.1.0"
edition = "2018"
authors = ["Ioan Coleman, ioan.coleman@gmail.com"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
bincode = "1.3"
rand = "0.9.0-alpha.2"
byteorder = "1.5.0"