[package]
name = "rust_monero_handshake"
version = "0.1.0"
edition = "2018"
authors = ["Ioan Coleman, ioan.coleman@gmail.com"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.9.0-alpha.2"
byteorder = "1.5.0"
log = "0.4"
env_logger = "0.9"
